# noticeable-calendar-alert

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  lefthook.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md  renovate.json
.github/workflows/: ci.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs  oauth.rs
src/lib/: alert.test.ts  alert.ts  animation.ts  calendar.test.ts  calendar.ts  countdown.test.ts  countdown.ts  demo.test.ts  demo.ts  errors.test.ts  errors.ts  poll.test.ts  poll.ts  tauri.ts  time.ts  tray.test.ts  tray.ts  url.test.ts  url.ts
src/lib/google/: adapters.ts  config.ts  events.test.ts  events.ts  google-calendar.test.ts  google-calendar.ts  oauth.test.ts  oauth.ts  pkce.test.ts  pkce.ts  ports.ts
