[package]
name = "noticeable-calendar-alert"
version = "0.1.0"
description = "Always-on-top calendar meeting overlay"
authors = ["Jason Suttles"]
edition = "2021"
rust-version = "1.77.2"

# The library target is what Tauri's mobile/desktop entry points share.
[lib]
name = "noticeable_calendar_alert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used by the CLI for production builds.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Optimize hard for the "ultra-lightweight" goal.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
